Added active neutrino likelihoods

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -31,24 +31,29 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu1:
-      fixed_value: 2.300E-10
+#      fixed_value: 2.300E-10
+      range: [0.0 ,2.3E-10]
     mNu2:
-      fixed_value: 2.30163E-10
+#      fixed_value: 2.30163E-10
+#      range: [8.56154E-12, 2.35326E-10]
+      range: [0.0, 2.3E-10]
     mNu3:
-      fixed_value: 2.35281E-10
+      range: [0.0, 2.3E-10]
+#      range: [4.98397E-11, 2.35506E-10]
+#      fixed_value: 2.35281E-10
 
     alpha1:
       range: [0, 6.283]
     alpha2:
       range: [0, 6.283]
     delta13:
-      range: [0, 6.283]
+      range: [3.52557, 5.44543]
     theta12:
-      fixed_value: 0.5843
+      range: [0.572643, 0.599172]
     theta23:
-     fixed_value: 0.7382
+      range: [0.705113, 0.752237]
     theta13:
-      fixed_value: 0.1483
+      range: [0.145037, 0.150273]
 
   # Higgs bosom parameters
   StandardModel_Higgs:
@@ -111,7 +116,9 @@ Scanner:
     de:
       plugin: diver
       like: LogLike
-      NP: 100
+      NP: 1000
+      conthresh: 1e-2
+      lambdajDE: false
 
     multinest:
       plugin: multinest
@@ -122,85 +129,105 @@ ObsLikes:
 
   # EWPO constraints
 
-  - capability: lnL_Gmu
-    purpose: LogLike
+#  - capability: lnL_Gmu
+#    purpose: LogLike
 
-  - capability: lnL_W_mass
-    purpose: LogLike
+#  - capability: lnL_W_mass
+#    purpose: LogLike
 
 #  - capability: lnL_sinW2
 #    purpose: LogLike
 
-  - capability: lnL_Z_inv_width
-    purpose: LogLike
+#  - capability: lnL_Z_inv_width
+#    purpose: LogLike
 
-  - capability: lnL_W_decays
-    purpose: LogLike
+#  - capability: lnL_W_decays
+#    purpose: LogLike
 
   # Indirecte searches
 
-  - capability: lnLbbn
-    purpose: LogLike
+#  - capability: lnLbbn
+#    purpose: LogLike
 
-  - capability: lnLlepuniv
-    purpose: LogLike
+#  - capability: lnLlepuniv
+#    purpose: LogLike
 
-  - capability: LUV_LL
-    purpose: LogLike
+#  - capability: LUV_LL
+#    purpose: LogLike
 
-  - capability: lnL_0nubb
-    purpose: LogLike
+#  - capability: lnL_0nubb
+#    purpose: LogLike
 
-  - capability: lnLckm
-    purpose: LogLike
+#  - capability: lnLckm
+#    purpose: LogLike
 
-  - capability: l2lgamma_lnL
-    purpose: LogLike
+#  - capability: l2lgamma_lnL
+#    purpose: LogLike
 
-  - capability: l2lll_lnL
-    purpose: LogLike
+#  - capability: l2lll_lnL
+#    purpose: LogLike
 
-  - capability: mu2e_lnL
-    purpose: LogLike
+#  - capability: mu2e_lnL
+#    purpose: LogLike
 
   # Direct searches
 
-  - capability: lnLpienu
-    purpose: LogLike
+#  - capability: lnLpienu
+#    purpose: LogLike
 
-  - capability: lnLps191e
-    purpose: LogLike
+#  - capability: lnLps191e
+#    purpose: LogLike
 
-  - capability: lnLps191mu
-    purpose: LogLike
+#  - capability: lnLps191mu
+#    purpose: LogLike
 
-  - capability: lnLcharme
-    purpose: LogLike
+#  - capability: lnLcharme
+#    purpose: LogLike
 
-  - capability: lnLcharmmu
-    purpose: LogLike
+#  - capability: lnLcharmmu
+#    purpose: LogLike
 
-  - capability: lnLdelphi
-    purpose: LogLike
+#  - capability: lnLdelphi
+#    purpose: LogLike
 
-  - capability: lnLatlase
-    purpose: LogLike
+#  - capability: lnLatlase
+#    purpose: LogLike
 
-  - capability: lnLatlasmu
-    purpose: LogLike
+#  - capability: lnLatlasmu
+#    purpose: LogLike
 
-  - capability: lnLe949
-    purpose: LogLike
+#  - capability: lnLe949
+#    purpose: LogLike
 
-  - capability: lnLnutev
-    purpose: LogLike
+#  - capability: lnLnutev
+#    purpose: LogLike
 
-  - capability: lnLcharmtau
-    purpose: LogLike
+#  - capability: lnLcharmtau
+#    purpose: LogLike
 
   # Theoretical constraints
 
   - capability: perturbativity_lnL
+    purpose: LogLike
+
+  # NuFit likelihoods
+  
+  - capability: sin2theta12_lnL
+    purpose: LogLike
+
+  - capability: sin2theta23_lnL
+    purpose: LogLike
+
+  - capability: sin2theta13_lnL
+    purpose: LogLike
+
+  - capability: deltaCP_lnL
+    purpose: LogLike
+
+  - capability: md21_lnL
+    purpose: LogLike
+
+  - capability: md3l_lnL
     purpose: LogLike
 
   # Observables
