Dramatically reduced RAM usage of C++ HDF5 combination routines

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -48,8 +48,8 @@ Scanner:
     multinest:
       plugin: multinest
       like:  LogLike
-      nlive: 1000
-      tol: 0.1
+      nlive: 5000
+      tol: 0.0000000000001
 
     mcmc:
       plugin: great
