--- a/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
@@ -6,7 +6,7 @@
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_defaults.yaml
 
   StandardModel_Higgs:
     mH:
@@ -110,13 +110,6 @@ ObsLikes:
     - capability: lnL_vesc
       purpose: LogLike
 
-    # SM nuisance parameter likelihoods
-    - capability: lnL_t_mass
-      purpose:    LogLike
-      
-    - capability: lnL_alpha_s
-      purpose:    LogLike
-      
     # Other observables
     - capability: RD_oh2
       purpose:    Observable
@@ -196,8 +189,8 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "DDM_test.hdf5"
-    delete_file_on_restart: false
+    output_file: "Dirac_high_mass_diver.hdf5"
+    delete_file_on_restart: true
     group: "/DDM"    
 
 ##############################################################################################
