--- a/yaml_files/scans/Vector/VectorDM_high_mass_TWalk.yaml
+++ b/yaml_files/scans/Vector/VectorDM_high_mass_TWalk.yaml
@@ -6,7 +6,7 @@
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_defaults.yaml
 
   StandardModel_Higgs:
     mH:
@@ -106,13 +106,6 @@ ObsLikes:
 
     - capability: lnL_vesc
       purpose: LogLike
-
-    # SM nuisance parameter likelihoods
-    - capability: lnL_t_mass
-      purpose:    LogLike
-      
-    - capability: lnL_alpha_s
-      purpose:    LogLike
       
     # Other observables
     - capability: RD_oh2
@@ -195,8 +188,8 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "VDM_test_diver.hdf5"
-    delete_file_on_restart: false
+    output_file: "Vector_high_mass_TWalk.hdf5"
+    delete_file_on_restart: true
     group: "/VDM"    
 
 ##############################################################################################
