Making the parsing of additional CLASS parameter more generic

--- a/yaml_files/CosmoBit_planck_lite.yaml
+++ b/yaml_files/CosmoBit_planck_lite.yaml
@@ -96,12 +96,13 @@ Rules:
 
   - capability: class_set_parameter
     options:
-      N_ur: 2.0328
-      N_ncdm: 1.
-      m_ncdm: 0.06
-      T_ncdm: 0.71611
-      k_pivot: 0.05
-  
+      class_dict:
+        N_ur: 2.0328
+        N_ncdm: 1.
+        m_ncdm: 0.06
+        T_ncdm: 0.71611
+        k_pivot: 0.05
+
 #======== Logging setup ========
 Lxogger:
   redirection:
