--- a/yaml_files/include/StandardModel_SLHA2_scan.yaml
+++ b/yaml_files/include/StandardModel_SLHA2_scan.yaml
@@ -30,8 +30,8 @@ alphainv:  1.27940010E+02 # alpha^{-1}(mZ)^MSbar *
 alphaS  :  # 1.18500000E-01 # alpha_s(mZ)^MSbar ^
            range: [0.1167, 0.1203]
 mBmB    :  4.18000000E+00 # mb(mb)^MSbar & #range: [4.09, 4.27]
-mT      :  # 1.73340000E+02 # mtop(pole) $
-           range: [171.06, 175.62]
+mT      :  1.73340000E+02 # mtop(pole) $
+           # range: [171.06, 175.62]
 GF      :  1.16637870E-05 # G_Fermi **
 mZ      :  9.11876000E+01 # mZ(pole) !
 mTau    :  1.77682000E+00 # mtau(pole) §
