--- a/yaml_files/scans/Dirac/DiracDM_fixed_xi_MN.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_fixed_xi_MN.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      DiracDM, high mass region, MultiNest, separate g_scalar and g_pseudoscalar.
+#      DiracDM, high mass region, MultiNest.
 #
 #################################################################################################
 
@@ -12,16 +12,14 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM_sps:
+  DiracDM_xi:
     mF: 
       range: [45., 10000.]
       prior_type: log
-    lF_s: 
+    lF: 
       range: [1e-6, 1]
       prior_type: log
-    lF_ps:
-      range: [1e-6, 1]
-      prior_type: log
+    xi: 0
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -100,16 +98,23 @@ ObsLikes:
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
       
+    # SM nuisance parameter likelihoods     
+    - capability: lnL_alpha_s
+      purpose:    LogLike    
+              
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
       
     - capability: lnL_v0
       purpose: LogLike
+      
+    - capability: lnL_vrot
+      purpose: LogLike
 
     - capability: lnL_vesc
       purpose: LogLike
-
+      
     # Other observables
     - capability: RD_oh2
       purpose:    Observable
@@ -141,12 +146,19 @@ Rules:
       v0_obs: 240
       v0_obserr: 8
       
+  # Set vrot to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_vrot
+    function: lnL_vrot_gaussian
+    options:
+      vrot_obs: 240
+      vrot_obserr: 8
+      
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
     options:
-      v0_obs: 533
-      v0_obserr: 31.9
+      vesc_obs: 533
+      vesc_obserr: 31.9
 
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
@@ -182,6 +194,8 @@ Rules:
   # Choose to obtain spectrum from the SpecBit module
   - capability: DiracDM_spectrum
     function: get_DiracDM_spectrum
+    options: 
+      impose_EFT_validity: true
 
 ##############################################################################################
 Printer:
@@ -189,7 +203,7 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Dirac_gs_gp_MN.hdf5"
+    output_file: "Dirac_MN_xi_0.hdf5"
     delete_file_on_restart: true
     group: "/DDM"    
 
@@ -243,4 +257,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "scans/Dirac_gs_gp/high_mass/MN"
+  default_output_path: "production_scans/Dirac/MN/xi_fixed"
