--- a/yaml_files/scans/Dirac/DiracDM_sps_high_mass_MN.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_sps_high_mass_MN.yaml
@@ -1,27 +1,27 @@
 #################################################################################################
 #
-#      DiracDM, high mass region, MultiNest.
+#      DiracDM, with specific scalar and pseudoscalar couplings, high mass region, MultiNest.
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_defaults.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
 
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM:
+  DiracDM_sps:
     mF: 
       range: [45., 10000.]
       prior_type: log
-    lF: 
+    lF_s: 
       range: [1e-6, 1]
       prior_type: log
-    cosXI:
-      range: [-1., 1]
-      prior_type: arccos
+    lF_ps:
+      range: [1e-6, 1]
+      prior_type: log
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -100,11 +100,18 @@ ObsLikes:
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
       
+    # SM nuisance parameter likelihoods     
+    - capability: lnL_alpha_s
+      purpose:    LogLike    
+              
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
       
     - capability: lnL_v0
+      purpose: LogLike
+      
+    - capability: lnL_vrot
       purpose: LogLike
 
     - capability: lnL_vesc
@@ -141,12 +148,19 @@ Rules:
       v0_obs: 240
       v0_obserr: 8
       
+  # Set vrot to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_vrot
+    function: lnL_vrot_gaussian
+    options:
+      vrot_obs: 240
+      vrot_obserr: 8
+      
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
     options:
-      v0_obs: 533
-      v0_obserr: 31.9
+      vesc_obs: 533
+      vesc_obserr: 31.9
 
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
@@ -182,6 +196,8 @@ Rules:
   # Choose to obtain spectrum from the SpecBit module
   - capability: DiracDM_spectrum
     function: get_DiracDM_spectrum
+    options: 
+      impose_EFT_validity: true
 
 ##############################################################################################
 Printer:
@@ -189,7 +205,7 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Dirac_high_mass_MN.hdf5"
+    output_file: "Dirac_MN_sps.hdf5"
     delete_file_on_restart: true
     group: "/DDM"    
 
@@ -243,4 +259,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "scans/Dirac/high_mass/MN"
+  default_output_path: "production_scans/Dirac/MN/sps"
