--- a/yaml_files/scans/Dirac/DiracDM_xi_high_mass_MN.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_xi_high_mass_MN.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      VectorDM, high mass region, TWalk.
+#      DiracDM, high mass region, MultiNest.
 #
 #################################################################################################
 
@@ -12,13 +12,16 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  VectorDM:
-    mV: 
-      range: [45., 70.]
-      prior_type: flat      
-    lambda_hV: 
-      range: [1e-4, 10.]
+  DiracDM_xi:
+    mF: 
+      range: [45., 10000.]
       prior_type: log
+    lF: 
+      range: [1e-6, 1]
+      prior_type: log
+    xi:
+      range: [0, 3.141592653589793238462643383279502884197]
+      prior_type: flat
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -99,8 +102,8 @@ ObsLikes:
       
     # SM nuisance parameter likelihoods     
     - capability: lnL_alpha_s
-      purpose:    LogLike    
-                    
+      purpose:    LogLike
+      
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
@@ -126,11 +129,7 @@ ObsLikes:
       
     - capability: sigma_SI_p
       purpose:    Observable
-      function:   sigma_SI_p_simple
-
-    - capability: sigma_SI_n
-      purpose:    Observable
-      function:   sigma_SI_n_simple
+      function:   sigma_SI_vnqn_FermionDMHiggsPortal
 
 ##############################################################################################
 Rules:
@@ -141,14 +140,14 @@ Rules:
     options:
       oh2_obs: 0.1199
       oh2_obserr: 0.0027
-
+      
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
     function: lnL_v0_gaussian
     options:
       v0_obs: 240
       v0_obserr: 8
-
+      
   # Set vrot to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_vrot
     function: lnL_vrot_gaussian
@@ -162,14 +161,14 @@ Rules:
     options:
       vesc_obs: 533
       vesc_obserr: 31.9
-      
-  # Choose to use capgen for solar capture rate
+
+  # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
-    function: capture_rate_Sun_const_xsec_capgen
+    function: capture_rate_Sun_vnqn
     
   - capability: equilibration_time_Sun
-    function: equilibration_time_Sun
-    
+    function: equilibration_time_Sun_FermionDMHiggsPortal
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
@@ -177,6 +176,8 @@ Rules:
   # Choose to use detailed Fermi Pass-8 dwarfs likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
     function:  lnL_FermiLATdwarfs_gamLike
+    options:
+      non_self_conjugate: true
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
@@ -186,17 +187,17 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_VectorDM
+    function: DD_couplings_DiracDM
 
   # Choose to compute decay rates from the DecayBit module
   - capability: decay_rates
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: VectorDM_spectrum
-    function: get_VectorDM_spectrum
+  - capability: DiracDM_spectrum
+    function: get_DiracDM_spectrum
     options:
-      impose_pert_unitarity: true
+      impose_EFT_validity: true
 
 ##############################################################################################
 Printer:
@@ -204,22 +205,22 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Vector_low_mass_TWalk.hdf5"
+    output_file: "Dirac_MN_xi_free.hdf5"
     delete_file_on_restart: true
-    group: "/VDM"    
+    group: "/DDM"    
 
 ##############################################################################################
 Scanner:
 
-  use_scanner: tw
+  use_scanner: mn
 
   scanners:
 
     mn:
       plugin: multinest
       like: LogLike
-      nlive: 1
-      tol: 0.7
+      nlive: 20000
+      tol: 1E-4
 
     diver:
       plugin: diver
@@ -230,8 +231,8 @@ Scanner:
 
     tw:
       plugin: twalk
-      sqrtR: 1.005
-      chain_number: 256
+      sqrtR: 1.001
+      chain_number: 512
 
 ##############################################################################################
 Logger:
@@ -258,4 +259,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Vector/low_mass/TWalk"
+  default_output_path: "production_scans/Dirac/MN/xi_free"
