--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_TWalk_xi_0.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_TWalk_xi_0.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      VectorDM, high mass region, TWalk.
+#      MajoranaDM, high mass region, TWalk.
 #
 #################################################################################################
 
@@ -12,13 +12,14 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  VectorDM:
-    mV: 
-      range: [45., 70.]
-      prior_type: flat      
-    lambda_hV: 
-      range: [1e-4, 10.]
+  MajoranaDM:
+    mX: 
+      range: [45., 10000.]
       prior_type: log
+    lX: 
+      range: [1e-6, 1]
+      prior_type: log
+    xi: 0 
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -126,11 +127,7 @@ ObsLikes:
       
     - capability: sigma_SI_p
       purpose:    Observable
-      function:   sigma_SI_p_simple
-
-    - capability: sigma_SI_n
-      purpose:    Observable
-      function:   sigma_SI_n_simple
+      function:   sigma_SI_vnqn_FermionDMHiggsPortal
 
 ##############################################################################################
 Rules:
@@ -141,14 +138,14 @@ Rules:
     options:
       oh2_obs: 0.1199
       oh2_obserr: 0.0027
-
+      
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
     function: lnL_v0_gaussian
     options:
       v0_obs: 240
       v0_obserr: 8
-
+      
   # Set vrot to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_vrot
     function: lnL_vrot_gaussian
@@ -162,14 +159,14 @@ Rules:
     options:
       vesc_obs: 533
       vesc_obserr: 31.9
-      
-  # Choose to use capgen for solar capture rate
+
+  # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
-    function: capture_rate_Sun_const_xsec_capgen
+    function: capture_rate_Sun_vnqn
     
   - capability: equilibration_time_Sun
-    function: equilibration_time_Sun
-    
+    function: equilibration_time_Sun_FermionDMHiggsPortal
+     
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
@@ -186,17 +183,17 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_VectorDM
+    function: DD_couplings_MajoranaDM
 
   # Choose to compute decay rates from the DecayBit module
   - capability: decay_rates
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: VectorDM_spectrum
-    function: get_VectorDM_spectrum
-    options:
-      impose_pert_unitarity: true
+  - capability: MajoranaDM_spectrum
+    function: get_MajoranaDM_spectrum
+    option:
+      impose_EFT_validity: true
 
 ##############################################################################################
 Printer:
@@ -204,9 +201,9 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Vector_low_mass_TWalk.hdf5"
+    output_file: "Majorana_high_mass_TWalk.hdf5"
     delete_file_on_restart: true
-    group: "/VDM"    
+    group: "/MDM"    
 
 ##############################################################################################
 Scanner:
@@ -258,4 +255,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Vector/low_mass/TWalk"
+  default_output_path: "production_scans/Majorana/high_mass/TWalk_xi0"
