--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
@@ -6,7 +6,7 @@
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_defaults.yaml
+  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan.yaml
 
   StandardModel_Higgs:
     mH:
@@ -19,9 +19,9 @@ Parameters:
     lX: 
       range: [1e-6, 1]
       prior_type: log
-    cosXI:
-      range: [-1., 1]
-      prior_type: arccos
+    xi:
+      range: [0, 3.141592653589793238462643383279502884197]
+      prior_type: flat
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -100,16 +100,23 @@ ObsLikes:
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
       
+    # SM nuisance parameter likelihoods     
+    - capability: lnL_alpha_s
+      purpose:    LogLike    
+                    
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
       
     - capability: lnL_v0
       purpose: LogLike
+      
+    - capability: lnL_vrot
+      purpose: LogLike
 
     - capability: lnL_vesc
       purpose: LogLike
-
+      
     # Other observables
     - capability: RD_oh2
       purpose:    Observable
@@ -141,12 +148,19 @@ Rules:
       v0_obs: 240
       v0_obserr: 8
       
+  # Set vrot to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_vrot
+    function: lnL_vrot_gaussian
+    options:
+      vrot_obs: 240
+      vrot_obserr: 8
+      
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
     options:
-      v0_obs: 533
-      v0_obserr: 31.9
+      vesc_obs: 533
+      vesc_obserr: 31.9
 
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
@@ -180,6 +194,8 @@ Rules:
   # Choose to obtain spectrum from the SpecBit module
   - capability: MajoranaDM_spectrum
     function: get_MajoranaDM_spectrum
+    option:
+      impose_EFT_validity: false
 
 ##############################################################################################
 Printer:
@@ -241,4 +257,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "scans/Majorana/high_mass/diver"
+  default_output_path: "production_scans/Majorana/high_mass/diver"
