Added theoretical calculation for RK*  Changes to be committed: 	modified:   FlavBit/include/gambit/FlavBit/FlavBit_rollcall.hpp 	modified:   FlavBit/src/FlavBit.cpp

--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -117,7 +117,7 @@ Scanner:
       plugin: diver
       like: LogLike
       NP: 6000
-      conthresh: 1e-2
+      convthresh: 1e-2
       lambdajDE: false
 
     multinest:
@@ -146,7 +146,7 @@ ObsLikes:
 
   # Indirecte searches
 
-  - capability: lnLbbn
+  - capability: lnL_bbn
     purpose: LogLike
 
   - capability: lnLlepuniv
@@ -155,8 +155,8 @@ ObsLikes:
   - capability: LUV_LL
     purpose: LogLike
 
-#  - capability: lnL_0nubb
-#    purpose: LogLike
+  - capability: lnL_0nubb
+    purpose: LogLike
 
   - capability: lnLckm
     purpose: LogLike
