Made python 2.7 required, for compatibility with pybind11. 	modified:   ../CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,12 +99,9 @@ include(cmake/utilities.cmake)
 
 # Check for Python interpreter
 find_package(PythonInterp 2 REQUIRED)
-if (PYTHON_VERSION_MAJOR GREATER 2)
-  message(FATAL_ERROR "\nGAMBIT requires Python 2.  \nIf you need to set the path to the Python interpreter manually, "
+if (PYTHON_VERSION_MAJOR GREATER 2 OR PYTHON_VERSION_MINOR LESS 7)
+  message(FATAL_ERROR "\nGAMBIT requires Python 2.7.  \nIf you need to set the path to the Python interpreter manually, "
                       "please use -DPYTHON_EXECUTABLE:FILEPATH=path/to/preferred/python.")
-endif()
-if (PYTHON_VERSION_MINOR LESS 6)
-  message("${Red}   Python version < 2.6.  GAMBIT has not been tested with this version; upgrade Python if you experience problems.${ColourReset}")
 endif()
 
 # Check for pybind11
