--- a/yaml_files/RHN.yaml
+++ b/yaml_files/RHN.yaml
@@ -129,14 +129,11 @@ ObsLikes:
 
   # EWPO constraints
 
-  - capability: lnL_Gmu
-    purpose: LogLike
-
   - capability: lnL_W_mass
     purpose: LogLike
 
-  - capability: lnL_sinW2
-    purpose: LogLike
+#  - capability: lnL_sinW2
+#    purpose: LogLike
 
   - capability: lnL_Z_inv_width
     purpose: LogLike
