edited yaml files (error)

--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_diver.yaml
@@ -193,7 +193,7 @@ Rules:
   # Choose to obtain spectrum from the SpecBit module
   - capability: MajoranaDM_spectrum
     function: get_MajoranaDM_spectrum
-    option:
+    options:
       impose_EFT_validity: false
 
 ##############################################################################################
