--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_MN.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_MN.yaml
@@ -193,7 +193,7 @@ Rules:
   # Choose to obtain spectrum from the SpecBit module
   - capability: MajoranaDM_spectrum
     function: get_MajoranaDM_spectrum
-    option:
+    options:
       impose_EFT_validity: true
 
 ##############################################################################################
@@ -247,6 +247,8 @@ Logger:
 
 ##############################################################################################
 KeyValues:
+
+  debug: true
 
   dependency_resolution:
     prefer_model_specific_functions: true
