--- a/yaml_files/RHN_diff.yaml
+++ b/yaml_files/RHN_diff.yaml
@@ -62,7 +62,7 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos:
+  RightHandedNeutrinos_diff:
     M_1:
       range: [0.06, 500]
       prior_type: log
