--- a/yaml_files/CosmoBit_planck_TTTEEE.yaml
+++ b/yaml_files/CosmoBit_planck_TTTEEE.yaml
@@ -86,6 +86,10 @@ Rules:
         T_ncdm: 0.71611
         k_pivot: 0.05
 
+  - capability: plc_2_0_init
+    options:
+      #planck_path: /YOUR/PATH/TO/plc_2.0
+
 #======== Logging setup ========
 Lxogger:
   redirection:
