--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,10 +125,16 @@ else()
 endif()
 if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
   message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
-  execute_process(COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
-  execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
-  use_contributed_pybind11()
+  execute_process(RESULT_VARIABLE result COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
+  if(${result} STREQUAL "0")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
+    use_contributed_pybind11()
     include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
+  else()
+    message("${BoldRed}   Attempt to clone git repository for pybind11 failed.  This may be because you are disconnected from the internet.\n   "
+            "Otherwise, your git installation may be faulty. Errors about missing .so files are usually due to\n   "
+            "your git installation being linked to a buggy version of libcurl.  In that case, try reinstalling libcurl.${ColourReset}")
+  endif()
 endif()
 set(HAVE_PYBIND11 "${pybind11_FOUND}")
 
