I've added the functions that are related to inflation to the source and header files following Patrick's re-structuring of the code. Omitted for now the full spectra, this will follow asap.

--- a/yaml_files/CosmoBit_planck_TT.yaml
+++ b/yaml_files/CosmoBit_planck_TT.yaml
@@ -85,6 +85,13 @@ Rules:
       T_ncdm: 0.71611
       k_pivot: 0.05
 
+#####
+##  If we are to use the inflationary solver,
+##  we must input here the relevant options,
+##  perhaps preferable via an additional file.
+## e.g.      !import include/inflation_rules.yaml
+####
+
 #======== Logging setup ========
 Lxogger:
   redirection:
