--- a/yaml_files/RHN_diff_IH_123_log_log.yaml
+++ b/yaml_files/RHN_diff_IH_123_log_log.yaml
@@ -52,7 +52,7 @@ Parameters:
     theta13:
       range: [0.139452, 0.155334] # 3-sigma range from NuFit
 
-  # Higgs bosom parameters
+  # Higgs boson parameters
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
@@ -63,23 +63,23 @@ Parameters:
       range: [0.06, 500]
       prior_type: log
     delta_M_2:
-      range: [1E-10, 1E2]
+      range: [1E-2, 500]
       prior_type: log
     delta_M_3:
-      range: [1E-10, 1E2]
+      range: [1E-2, 500]
       prior_type: log
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-5, 5]
+      range: [-7, 7]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-5, 5]
+      range: [-7, 7]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-5, 5]
+      range: [-7, 7]
 
 Priors:
 
